Prueba de commit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Asignamos el icono de la pagina-->
     <link rel="shortcut icon" href="cal.ico">
     <link rel="stylesheet" href="estilo.css">
-    <title>Calculadora</title>
+    <title>Calculadora Maestra</title>
 </head>
 <body>
     <header>
