--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                 <td id="7" onclick="escribir_numeros('7')">7</td>
                 <td id="8" onclick="escribir_numeros('8')">8</td>
                 <td id="9" onclick="escribir_numeros('9')">9</td>
-                <td id="borrar">«</td>
+                <td id="borrar" onclick="borrar()">«</td>
             </tr>
             <tr><!--Fila  3 -->
                 <td id="4" onclick="escribir_numeros('4')">4</td>
                 <td id="5" onclick="escribir_numeros('5')">5</td>
                 <td id="6" onclick="escribir_numeros('6')">6</td>
-                <td id="C">C</td>
+                <td id="C" onclick="borrar_todo()">C</td>
             </tr>
 
             <tr><!--Fila  4-->
