Agrego un link al menu/inicio y su estilo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <hr>
     <nav>
-        <p>Inicio</p>
+        <a href="#">Inicio</a>
         <p>Todas las calculadora</p>
         <p>Quienes somos</p>
         <p>Donaciones</p>
