Se  modifica para poder realizar más de una operación a la vez

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#" class="inicio" id="inicio">Inicio</a>
             </li>
 
-            <li class="lista_menu_princi" onmouseover="ver_menu()" onmouseout="no_ver_menu()">
+            <li class="lista_menu_princi"  >
                 <a href="#" class="inicio" id="inicio">Todas las calculadora</a>
             </li>
 
@@ -38,7 +38,7 @@
         <caption><input type="text" id="pantalla" name="display"></caption><!--Elemento para dar el nombre de la tabla-->
         <thead>
             <tr><!--Fila  1 y con th la definimos como cabezera-->
-                <th id="+" onclick="suma()">+</th><!--celda-->
+                <th id="+" onclick="suma()">+</th>
                 <th id="-" onclick="resta()">-</th>
                 <th id="*" onclick="multi()">*</th>
                 <th id="/" onclick="divi()">/</th>
