--- a/index.html
+++ b/index.html
@@ -38,38 +38,42 @@
         <caption><input type="text" id="pantalla" name="display"></caption><!--Elemento para dar el nombre de la tabla-->
         <thead>
             <tr><!--Fila  1 y con th la definimos como cabezera-->
-                <th id="+" onclick="suma()">+</th>
-                <th id="-" onclick="resta()">-</th>
-                <th id="*" onclick="multi()">*</th>
-                <th id="/" onclick="divi()">/</th>
+                <th id="+" class="operaciones"  onclick="suma()">+</th>
+                <th id="-" class="operaciones"  onclick="resta()">-</th>
+                <th id="*" class="operaciones"  onclick="multi()">*</th>
+                <th id="/" class="operaciones"  onclick="divi()">/</th>
             </tr>
         </thead>
         <tbody>
             <tr><!--Fila  2-->
-                <td id="7" onclick="escribir_numeros('7')">7</td>
-                <td id="8" onclick="escribir_numeros('8')">8</td>
-                <td id="9" onclick="escribir_numeros('9')">9</td>
+                <td id="7" class="numeros" onclick="escribir_numeros('7')">7</td>
+                <td id="8" class="numeros" onclick="escribir_numeros('8')">8</td>
+                <td id="9" class="numeros" onclick="escribir_numeros('9')">9</td>
                 <td id="borrar" onclick="borrar()">«</td>
             </tr>
             <tr><!--Fila  3 -->
-                <td id="4" onclick="escribir_numeros('4')">4</td>
-                <td id="5" onclick="escribir_numeros('5')">5</td>
-                <td id="6" onclick="escribir_numeros('6')">6</td>
+                <td id="4" class="numeros" onclick="escribir_numeros('4')">4</td>
+                <td id="5" class="numeros" onclick="escribir_numeros('5')">5</td>
+                <td id="6" class="numeros" onclick="escribir_numeros('6')">6</td>
                 <td id="C" onclick="borrar_todo()">C</td>
             </tr>
 
             <tr><!--Fila  4-->
-                <td id="1" onclick="escribir_numeros('1')">1</td>
-                <td id="2" onclick="escribir_numeros('2')">2</td>
-                <td id="3" onclick="escribir_numeros('3')">3</td>
-                <td id="CE">CE</td>
+                <td id="1" class="numeros" onclick="escribir_numeros('1')">1</td>
+                <td id="2" class="numeros" onclick="escribir_numeros('2')">2</td>
+                <td id="3" class="numeros" onclick="escribir_numeros('3')">3</td>
+                <td></td>
             </tr>
 
             <tr><!--Fila  5-->
-                <td id="0" onclick="escribir_numeros('0')">0</td>
-                <td id="00" onclick="escribir_numeros('00')">00</td>
-                <td id="." onclick="escribir_numeros('.')">.</td>
-                <td id="=" onclick="igual()">=</td>
+                <td id="0" class="numeros" onclick="escribir_numeros('0')">0</td>
+                <td id="00" class="numeros" onclick="escribir_numeros('00')">00</td>
+                <td id="." class="numeros" onclick="escribir_numeros('.')">.</td>
+                <td id="+/-"  onclick="cambiar_signo()">+/-</td>
+            </tr>
+
+            <tr>
+                <td id="=" colspan="4" class="igual" onclick="igual()">=</td>
             </tr>
         </tbody>
         </tfoot>
