Agrego servicio de publicidad de google

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         </ul>
     </nav>
     <hr>
+    <div id="publicidad">
+        <script data-ad-client="ca-pub-2681264411576081" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    </div>
     <table> 
         <caption><input type="text" id="pantalla" name="display"></caption><!--Elemento para dar el nombre de la tabla-->
         <thead>
