Se implementa el ingreso de valores por teclados y alertas por error en el ingreso de datos

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         </ul>
     </nav>
     <hr>
-    <div id="publicidad">
+    <!-- <div id="publicidad">
         <script data-ad-client="ca-pub-2681264411576081" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    </div>
+    </div> -->
     <table> 
-        <caption><input type="text" id="pantalla" name="display"></caption><!--Elemento para dar el nombre de la tabla-->
+        <caption><input type="text" id="pantalla" name="display" size="23"></caption><!--Elemento para dar el nombre de la tabla-->
         <thead>
             <tr><!--Fila  1 y con th la definimos como cabezera-->
                 <th id="+" class="operaciones"  onclick="suma()">+</th>
